--- a/partials/_presentation.scss
+++ b/partials/_presentation.scss
@@ -1,5 +1,4 @@
 .presentation {
-    padding: 0px 16px;
     text-align: center;
 
     &-title {
