--- a/partials/_services.scss
+++ b/partials/_services.scss
@@ -1,7 +1,6 @@
 .services {
     background-color: #1b1c20;
     margin-top: 80px;
-    width: calc(100% - 32px); //Garante 16px de espaço em cada lado nas telas menores
     padding: 48px 24px;
     border-radius: 15px;
     color: $white-normal;    
